--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "express": "4.17.1",
     "express-async-errors": "3.1.1",
     "joi": "17.6.0",
-    "mysql2": "2.3.0",
+    "mysql2": "^2.3.0",
+    "sequelize": "^6.26.0",
     "shelljs": "0.8.5"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "mocha": "8.4.0",
     "nodemon": "2.0.4",
     "nyc": "15.1.0",
+    "sequelize-cli": "^6.5.2",
     "sinon": "11.1.1",
     "sinon-chai": "3.7.0"
   }
